[package]
name = "xiv"
version = "0.1.0"
authors = ["Christopher Anderson <'chris@nullcode.org'>"]
edition = "2018"

[dependencies]
failure = "0.1.6"
lazy_static = "1.4.0"
log = "0.4.8"
linked_hash_set = "0.1.3"
bitflags = "1.2.1"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["minwindef", "windef", "winuser"] }
