[package]
name = "xivapi"
version = "0.1.0"
authors = ["Christopher Anderson <'chris@nullcode.org'>"]
edition = "2018"

[dependencies]
url = "2.1.1"
reqwest = { version = "0.10.1", features = ["blocking"] }
log = "0.4.8"
serde_json = "1.0.46"
failure = "0.1.6"
serde = { version = "1.0.104", features = ["derive"] }
env_logger = "0.7.1"
